--- a/templates/intervation/_form.html.twig
+++ b/templates/intervation/_form.html.twig
@@ -35,10 +35,10 @@
                     <div class="row">
                         <div class="col-6 ">
                             <div class="form-input form-floating ">
-                                {{ form_widget(form.status, {'attr': {'class': 'form-control form-control-sm',  'placeholder':'Status'}}) }}
-                                <label> Status</label>
+                                {{ form_widget(form.etat, {'attr': {'class': 'form-control form-control-sm',  'placeholder':'état'}}) }}
+                                <label> Etat</label>
                                 <div class="form-error fst-italic">
-                                    {{ form_errors(form.status) }}
+                                    {{ form_errors(form.etat) }}
                                 </div>
                             </div>
                         </div>
@@ -48,6 +48,27 @@
                                 <label>Type</label>
                                 <div class="form-error fst-italic">
                                     {{ form_errors(form.type) }}
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col-6 ">
+                            <div class="form-input form-floating ">
+                                {{ form_widget(form.risque, {'attr': {'class': 'form-control form-control-sm',  'placeholder':'état'}}) }}
+                                <label> Risque</label>
+                                <div class="form-error fst-italic">
+                                    {{ form_errors(form.risque) }}
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-6">
+                            <div class="form-input form-floating ">
+                                {{ form_widget(form.epi, {'attr': {'class': 'form-control form-control-sm',  'placeholder':'Status'}}) }}
+                                <label>Equipement de protection</label>
+                                <div class="form-error fst-italic">
+                                    {{ form_errors(form.epi) }}
                                 </div>
                             </div>
                         </div>
@@ -64,9 +85,29 @@
                     </div>
 
                     <hr>
+                    <h3>Ressources</h3>
                     <div class="row px-3">
                         <label>Intervenant(s)</label>
                         {{ form_widget(form.intervenant) }}
+                    </div>
+                    <div class="row">
+                        <div class="col-6 ">
+                            <div class="form-input form-floating ">
+                                <label>Article magasin</label>
+                                <div class="form-error fst-italic">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-6">
+                            <div class="form-input form-floating ">
+                                <label>Outillage de travail</label>
+                                <div class="form-error fst-italic">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row px-3">
+                        <label>Autres ressource</label>
                     </div>
                     <div class="d-grid gap-2 col-6 mx-auto mt-2">
                         <button class="btn btn-primary">{{ button_label|default('Enregistrer') }}</button>
